remove fixed attachment on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -518,6 +518,7 @@ html {
 @media screen and (max-width: 34.375em) {
   .header {
     background-image: url(../images/mobile/image-header.jpg);
+    background-attachment: scroll;
   }
 }
 
