--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -19,6 +19,7 @@
 
   @media screen and (max-width: 34.375em) {
     background-image: url(../images/mobile/image-header.jpg);
+    background-attachment: scroll;
   }
 }
 
